<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PiaPia来电归属地</string>
    <string name="delete_button_descrition">点击清除输入</string>
    <string name="test_input">15210</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="action_feedback">反馈</string>
    <string name="action_check_update">检查更新</string>
    <string name="about_version">		版本:1.0</string>
    <string name="about_email">		邮箱：yiqusupport@163.com</string>
    <string name="about_weibo">		微博：weibo.com/yiquwireless</string>
    
    <string name="about">关于</string>
    <string name="email">反馈邮箱</string>
    <string name="email_content">yiqusupport@163.com</string>
    <string name="weibo">新浪微博</string>
    <string name="weibo_content">weibo.com/yiquwireless</string>
    <string name="version">软件版本</string>
    <string name="version_content">1.0</string>
    
    <string name="setting_show_area_title">显示设置</string>
    <string name="setting_show_area">归属地显示</string>
    <string name="setting_query_title">查询设置</string>
    <string name="setting_show_area_call_out">去电显示归属地</string>
    <string name="setting_show_area_call_in">来电显示归属地</string>
    <string name="setting_show_area_call_in_summary">当电话呼入时在界面显示归属地信息</string>
    <string name="setting_show_area_call_out_summary">在您呼叫时显示所呼叫号码的归属地信息</string>
    <string name="setting_using_network_summary">查询归属地的时候使用网络</string>
    <string name="none_area">[暂无归属地信息]</string>
    <string name="input_notify">输入7到11位手机号码进行查询</string>

</resources>